--- a/members/index.html
+++ b/members/index.html
@@ -1,12 +1,12 @@
 ---
-title: Fraser Lab Members
+title: Stajich Lab Members
 layout: members
 group: members
 ---
 
-<h1>Fraser Lab Members</h1>
+<h1>Stajich Lab Members</h1>
 
-The Fraser lab welcomes people of any race, ethnicity, religion, national origin, gender identity, gender expression, caregiver and family commitments, political affiliation, sexual orientation, and eligible age or disability status.<br>
+Stajich lab welcomes people of any race, ethnicity, religion, national origin, gender identity, gender expression, caregiver and family commitments, political affiliation, sexual orientation, and eligible age or disability status.<br>
 <h5>See our<a href="/compact/"> lab compact and philosophy</a>.</h5>
 
 {% for member in site.members %}
